--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/Password.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/Password.ascx.nl-NL.resx
@@ -91,7 +91,7 @@
     <value xml:space="preserve">Huidig Wachtwoord:</value>
   </data>
   <data name="plQAPassword.Help">
-    <value xml:space="preserve">Voer uw huidig wachtwoord in.</value>
+    <value xml:space="preserve">Voer je huidig wachtwoord in.</value>
   </data>
   <data name="plQAPassword.Text">
     <value xml:space="preserve">Wachtwoord:</value>
