--- a/Resources/admin/Security/App_LocalResources/PasswordReset.ascx.nl-NL.resx
+++ b/Resources/admin/Security/App_LocalResources/PasswordReset.ascx.nl-NL.resx
@@ -139,7 +139,7 @@
     <value>Wachtwoord herstellen</value>
   </data>
   <data name="Email.Help" xml:space="preserve">
-    <value>Vul uw e-mailadres in</value>
+    <value>Vul je e-mailadres in</value>
   </data>
   <data name="Email.Required" xml:space="preserve">
     <value>U dient een e-mailadres in te voeren</value>
@@ -151,7 +151,7 @@
     <value>Het herstellen van het wachtwoord is mislukt - de gebruikersnaam/token combinatie is ongeldig, of het token is verlopen.</value>
   </data>
   <data name="ForcedResetInfo.Text" xml:space="preserve">
-    <value>Het wachtwoord moet worden veranderd voordat je kunt inloggen met uw account. Er is een wachtwoordherstel link naar je e-mailadres toegestuurd waarmee je een nieuw wachtwoord kunt aanmaken.</value>
+    <value>Het wachtwoord moet worden veranderd voordat je kunt inloggen met je account. Er is een wachtwoordherstel link naar je e-mailadres toegestuurd waarmee je een nieuw wachtwoord kunt aanmaken.</value>
   </data>
   <data name="Password.Help" xml:space="preserve">
     <value>Vul je wachtwoord in.</value>
