--- a/Resources/admin/Security/App_LocalResources/SendPassword.ascx.nl-NL.resx
+++ b/Resources/admin/Security/App_LocalResources/SendPassword.ascx.nl-NL.resx
@@ -199,7 +199,7 @@
     <value> Je moet antwoord geven op de vraag die je tijdens de registratie hebt opgegeven.</value>
   </data>
   <data name="RequiresUniqueEmail.Text" xml:space="preserve">
-    <value>&lt;br/&gt;&lt;br/&gt;Je kunt het e-mailadres opvragen door je emailadres of gebruikersnaam in te vullen.</value>
+    <value>&lt;br/&gt;&lt;br/&gt;Je kunt het e-mailadres opvragen door je e-mailadres of gebruikersnaam in te vullen.</value>
   </data>
   <data name="ResetPassword.Text" xml:space="preserve">
     <value>Wachtwoord herstellen</value>
