--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Connectors/App_LocalResources/connectors.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Connectors/App_LocalResources/connectors.nl-NL.resx
@@ -58,6 +58,6 @@
     <value xml:space="preserve">Item is succesvol opgeslagen.</value>
   </data>
   <data name="txt_SetupConnections.Text" lastModified="2018-07-19 03:25:01">
-    <value xml:space="preserve">Stel uw koppelingen in om gemakkelijk inhoud en meer te delen</value>
+    <value xml:space="preserve">Stel je koppelingen in om gemakkelijk inhoud en meer te delen</value>
   </data>
 </root>
