--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Servers/App_LocalResources/servers.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Servers/App_LocalResources/servers.nl-NL.resx
@@ -106,7 +106,7 @@
     <value xml:space="preserve">Bestandstype</value>
   </data>
   <data name="GlobalSettings.Text" lastModified="2016-12-01 14:24:25">
-    <value xml:space="preserve">Dit zijn globale instellingen. Wijzigingen aan deze instellingen zullen al uw sites beinvloeden.</value>
+    <value xml:space="preserve">Dit zijn globale instellingen. Wijzigingen aan deze instellingen zullen al je sites beinvloeden.</value>
   </data>
   <data name="GlobalSmtpHostSetting.Text" lastModified="2016-12-01 14:24:25">
     <value xml:space="preserve">Globale</value>
@@ -214,22 +214,22 @@
     <value xml:space="preserve">Caching Provider</value>
   </data>
   <data name="PerformanceTab_ClientResourceManagementInfo.Text" lastModified="2016-12-01 18:38:15">
-    <value xml:space="preserve">De superuser bepaalt het standaard Client Resource Management gedrag, maar als u kiest om dat te doen, moet u uw site configureren om anders te gedragen. De host-niveau instellingen zijn momenteel ingesteld als volgt:</value>
+    <value xml:space="preserve">De applicatiebeheerder bepaalt het standaard Client Resource Management gedrag, maar als je kiest om dat te doen, moet je je site configureren om anders te gedragen. De host-niveau instellingen zijn momenteel ingesteld als volgt:</value>
   </data>
   <data name="PerformanceTab_ClientResourceManagementTitle.Text" lastModified="2016-12-01 19:39:48">
     <value xml:space="preserve">Client Resource Management</value>
   </data>
   <data name="PerformanceTab_ClientResourcesManagementMode.Help" lastModified="2016-12-01 19:39:48">
-    <value xml:space="preserve">Host Modus gebruikt alle Client Resources Management Instellingen ingesteld op applicatie niveau. Site niveau staat u toe om uw eigen Client Resources Management Instellingen te selecteren.</value>
+    <value xml:space="preserve">Applicatiebeheer Modus gebruikt alle Client Resources Management Instellingen ingesteld op applicatieniveau. Siteniveau staat je toe om je eigen Client Resources Management Instellingen te selecteren.</value>
   </data>
   <data name="PerformanceTab_ClientResourcesManagementMode.Text" lastModified="2016-12-01 19:39:48">
     <value xml:space="preserve">Client Resource Management Modus</value>
   </data>
   <data name="PerformanceTab_CurrentHostVersion.Text" lastModified="2016-12-01 19:39:48">
-    <value xml:space="preserve">Huidige Host Versie:</value>
+    <value xml:space="preserve">Huidige Applicatiebeheerversie:</value>
   </data>
   <data name="PerformanceTab_CurrentPortalVersion.Text" lastModified="2016-12-01 20:40:05">
-    <value xml:space="preserve">Site Versie:</value>
+    <value xml:space="preserve">Siteversie:</value>
   </data>
   <data name="PerformanceTab_EnableCompositeFiles.Help" lastModified="2016-12-01 21:43:01">
     <value xml:space="preserve">Samengestelde bestanden zijn combinaties van bronnen (Javascript en CSS) gemaakt om het aantal bestands verzoeken door de browser te beperken. Dit zal de pagina laad snelheid verhogen.</value>
@@ -253,7 +253,7 @@
     <value xml:space="preserve">Geheugen</value>
   </data>
   <data name="PerformanceTab_MinifactionWarning.Text" lastModified="2016-12-01 23:46:23">
-    <value xml:space="preserve">Belangrijke opmerking betreffende minificatie instellingen. &lt;br/&gt; Als minificatie instellingen gewijzigd zijn wanneer samengesteld bestanden ingeschakeld zijn, dan moet u eerst de minificatie instellingen opslaan door te klikken op Opslaan en dan het versie nummer op te hogen. Dit zal nieuwe bestanden aanmaken met de nieuwe minificatie instellingen.</value>
+    <value xml:space="preserve">Belangrijke opmerking betreffende minificatie instellingen. &lt;br/&gt; Als minificatie instellingen gewijzigd zijn wanneer samengesteld bestanden ingeschakeld zijn, dan moet je eerst de minificatie instellingen opslaan door te klikken op Opslaan en dan het versie nummer op te hogen. Dit zal nieuwe bestanden aanmaken met de nieuwe minificatie instellingen.</value>
   </data>
   <data name="PerformanceTab_MinifyCss.Help" lastModified="2016-12-02 00:49:49">
     <value xml:space="preserve">CSS Minificatie reduceert de grootte van CSS Code door vaakgebruikte uitdrukkingen te gebruiken om reacties te verwijderen, whitespace en "dode CSS". Het is enkel beschikbaar wanneer samengesteld bestanden staan ingeschakeld.</value>
@@ -295,7 +295,7 @@
     <value xml:space="preserve">Page State Persistence:</value>
   </data>
   <data name="PerformanceTab_PortalVersionConfirmMessage.Text" lastModified="2016-12-02 06:05:20">
-    <value xml:space="preserve">Deze actie forceert alle site bezoekers om nieuwe versies te downloaden van CSS en Javascript bestanden. U zou dit enkel moeten doen als u zeker weet dat de bestanden gewijzigd zijn en u deze wijzigingen gecheckt wilt hebben op de browser van de klant. Weet u zeker dat u het versienummer wilt ophogen voor uw site?</value>
+    <value xml:space="preserve">Deze actie forceert alle site bezoekers om nieuwe versies te downloaden van CSS en Javascript bestanden. Je zou dit enkel moeten doen als je zeker weet dat de bestanden gewijzigd zijn en je deze wijzigingen gecheckt wilt hebben op de browser van de klant. Weet je zeker dat je het versienummer wilt ophogen voor je site?</value>
   </data>
   <data name="PerformanceTab_PortalVersionConfirmNo.Text" lastModified="2016-12-02 06:05:20">
     <value xml:space="preserve">Nee</value>
@@ -322,7 +322,7 @@
     <value xml:space="preserve">Database Backup geschiedenis:</value>
   </data>
   <data name="plBatch.Help" lastModified="2016-12-02 08:09:28">
-    <value xml:space="preserve">Het aantal verzonden berichten verzonden door de berichten planner in elke batch.</value>
+    <value xml:space="preserve">Het aantal verzonden berichten verzonden door de berichtenplanner in elke batch.</value>
   </data>
   <data name="plBatch.Text" lastModified="2016-12-02 08:09:28">
     <value xml:space="preserve">Aantal berichten verzonden per batch:</value>
@@ -331,25 +331,25 @@
     <value xml:space="preserve">Het maximum aantal verbindingen toegestaan op dit ServicePoint Object.Max waarde is  2147483647. Standaard is 1.</value>
   </data>
   <data name="plConnectionLimit.Text" lastModified="2016-12-02 09:10:32">
-    <value xml:space="preserve">Verbinding Limiet:</value>
+    <value xml:space="preserve">Verbindingslimiet:</value>
   </data>
   <data name="plDataProvider.Help" lastModified="2016-12-02 09:10:32">
-    <value xml:space="preserve">De standaard data provider voor deze applicatie.</value>
+    <value xml:space="preserve">De standaard dataprovider voor deze applicatie.</value>
   </data>
   <data name="plDataProvider.Text" lastModified="2016-12-02 09:10:32">
-    <value xml:space="preserve">Data provider:</value>
+    <value xml:space="preserve">Dataprovider:</value>
   </data>
   <data name="plFiles.Text" lastModified="2016-12-02 09:10:32">
-    <value xml:space="preserve">Database bestanden:</value>
+    <value xml:space="preserve">Databasebestanden:</value>
   </data>
   <data name="plGUID.Help" lastModified="2016-12-02 09:10:32">
     <value xml:space="preserve">De globaal unieke identifier die gebruikt kan worden om deze applicatie te identificeren.</value>
   </data>
   <data name="plGUID.Text" lastModified="2018-07-24 13:05:46">
-    <value xml:space="preserve">Gastheer GUID:</value>
+    <value xml:space="preserve">Applicatiebeheerder GUID:</value>
   </data>
   <data name="plHostEmail.Help" lastModified="2020-05-10 15:52:44">
-    <value xml:space="preserve">De host e-mail is gebruikt voor het testen van de mail server. Dit e-mail adres kan ook gebruikt worden door extensies om de persoon te bereiken die verantwoordelijk is voor de hosting.</value>
+    <value xml:space="preserve">Het e-mailadres van het applicatiebeheerdersaccount is gebruikt voor het testen van de mail server. Dit e-mailadres kan ook gebruikt worden door uitbreidingen om de persoon te bereiken die verantwoordelijk is voor de hosting.</value>
   </data>
   <data name="plHostEmail.Text">
     <value xml:space="preserve">Host e-mail</value>
@@ -361,7 +361,7 @@
     <value xml:space="preserve">Max. inactieve tijd:</value>
   </data>
   <data name="plProduct.Help" lastModified="2016-12-02 11:14:40">
-    <value xml:space="preserve">De applicatie die u draait</value>
+    <value xml:space="preserve">De applicatie die je draait</value>
   </data>
   <data name="plProduct.Text" lastModified="2016-12-02 11:14:40">
     <value xml:space="preserve">Product:</value>
@@ -379,7 +379,7 @@
     <value xml:space="preserve">SMTP Inschakelen SSL:</value>
   </data>
   <data name="plSMTPMode.Help" lastModified="2016-12-02 12:18:00">
-    <value xml:space="preserve">Host Modus verzorgt alle SMTP instellingen ingesteld op applicatie niveau. Site niveau staat u toe om uw eigen SMTP server te selecteren, port en authenticatie methode.</value>
+    <value xml:space="preserve">Applicatiebeheerdersmodus verzorgt alle SMTP instellingen ingesteld op applicatie niveau. Siteniveau staat je toe om je eigen SMTP server te selecteren, port en authenticatie methode.</value>
   </data>
   <data name="plSMTPMode.Text" lastModified="2016-12-02 12:18:00">
     <value xml:space="preserve">SMTP Server Modus:</value>
@@ -391,7 +391,7 @@
     <value xml:space="preserve">SMTP wachtwoord:</value>
   </data>
   <data name="plSMTPServer.Help" lastModified="2016-12-02 12:18:00">
-    <value xml:space="preserve">Vul de naam in (adres) en port van de SMTP server die gebruikt moet worden voor het verzenden van emails vanaf deze site.</value>
+    <value xml:space="preserve">Vul de naam in (adres) en port van de SMTP server die gebruikt moet worden voor het verzenden van e-mails vanaf deze site.</value>
   </data>
   <data name="plSMTPServer.Text" lastModified="2016-12-02 12:18:00">
     <value xml:space="preserve">SMTP Server en Port</value>
@@ -427,7 +427,7 @@
     <value xml:space="preserve">De naam van de Host computer.</value>
   </data>
   <data name="ServerInfo_HostName.Text" lastModified="2016-12-02 01:52:33">
-    <value xml:space="preserve">Host Naam:</value>
+    <value xml:space="preserve">Applicatiebeheerdersnaam:</value>
   </data>
   <data name="ServerInfo_Identity.Help" lastModified="2016-12-02 01:52:33">
     <value xml:space="preserve">Het Windows gebruikersaccount waaronder de applicatie draait. Dit is de account waar map toestemmingen aan moeten worden verleend op de server.</value>
@@ -502,13 +502,13 @@
     <value xml:space="preserve">Prestatie</value>
   </data>
   <data name="tabServerSettingsTitle.Text" lastModified="2016-12-02 03:56:14">
-    <value xml:space="preserve">Server instellingen</value>
+    <value xml:space="preserve">Serverinstellingen</value>
   </data>
   <data name="tabSmtpServerTitle.Text" lastModified="2016-12-02 03:56:14">
     <value xml:space="preserve">SMTP Server</value>
   </data>
   <data name="tabSystemInfoTitle.Text" lastModified="2016-12-02 03:56:14">
-    <value xml:space="preserve">Systeem Info</value>
+    <value xml:space="preserve">Systeeminformatie</value>
   </data>
   <data name="tabWebTitle.Text" lastModified="2016-12-02 03:56:14">
     <value xml:space="preserve">Web</value>
