--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.SiteGroups/App_LocalResources/sitegroups.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.SiteGroups/App_LocalResources/sitegroups.nl-NL.resx
@@ -25,7 +25,7 @@
     <value xml:space="preserve">Annuleren</value>
   </data>
   <data name="ChooseASite.Label" lastModified="2020-05-08 16:36:35">
-    <value xml:space="preserve">Kies een portal</value>
+    <value xml:space="preserve">Kies een site</value>
   </data>
   <data name="Delete.Button" lastModified="2020-05-08 16:36:35">
     <value xml:space="preserve">Verwijderen</value>
@@ -34,7 +34,7 @@
     <value xml:space="preserve">Wwet u zeker dat u deze sitegroep wilt verwijderen?</value>
   </data>
   <data name="Description.Help" lastModified="2020-05-08 16:36:35">
-    <value xml:space="preserve">Omschrijf de portal</value>
+    <value xml:space="preserve">Omschrijf de site</value>
   </data>
   <data name="Description.Label" lastModified="2020-05-08 16:36:35">
     <value xml:space="preserve">Omschrijving</value>
@@ -61,30 +61,30 @@
     <value xml:space="preserve">Een naam van de groep is vereist</value>
   </data>
   <data name="MasterSite.Header" lastModified="2020-05-08 16:36:35">
-    <value xml:space="preserve">Hoofdportal</value>
+    <value xml:space="preserve">Hoofdsite</value>
   </data>
   <data name="MasterSite.Help" lastModified="2020-05-08 16:36:35">
-    <value xml:space="preserve">Hoofdportal</value>
+    <value xml:space="preserve">Hoofdsite</value>
   </data>
   <data name="MasterSite.Label" lastModified="2020-05-08 16:36:35">
-    <value xml:space="preserve">Hoofdportal:</value>
+    <value xml:space="preserve">Hoofdsite:</value>
   </data>
   <data name="nav_SiteGroups.Text" lastModified="2020-05-08 16:36:35">
-    <value xml:space="preserve">Portalgroep</value>
+    <value xml:space="preserve">Sitegroep</value>
   </data>
   <data name="NewSiteGroup.Button" lastModified="2020-05-08 16:36:35">
-    <value xml:space="preserve">Nieuwe portalgroep</value>
+    <value xml:space="preserve">Nieuwe sitegroep</value>
   </data>
   <data name="NoData.Text" lastModified="2020-05-08 16:36:35">
-    <value xml:space="preserve">Er zijn nog geen portalgroepen gedefinieerd</value>
+    <value xml:space="preserve">Er zijn nog geen sitegroepen gedefinieerd</value>
   </data>
   <data name="Save.Button" lastModified="2020-05-08 16:36:35">
     <value xml:space="preserve">Opslaan</value>
   </data>
   <data name="SiteGroup.Label" lastModified="2020-05-08 16:36:35">
-    <value xml:space="preserve">Portalgroep:</value>
+    <value xml:space="preserve">Sitegroep:</value>
   </data>
   <data name="Sites.Label" lastModified="2020-05-08 16:36:35">
-    <value xml:space="preserve">Portalen:</value>
+    <value xml:space="preserve">Sites:</value>
   </data>
 </root>
