--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.TaskScheduler/App_LocalResources/taskscheduler.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.TaskScheduler/App_LocalResources/taskscheduler.nl-NL.resx
@@ -786,7 +786,7 @@
     <value xml:space="preserve">Instellingen</value>
   </data>
   <data name="SettingsRestoreWarning.Text" lastModified="2016-12-01 13:24:06">
-    <value xml:space="preserve">Weet u zeker dat u uw wijzigingen wilt annuleren?</value>
+    <value xml:space="preserve">Weet u zeker dat je je wijzigingen wilt annuleren?</value>
   </data>
   <data name="SHUTTING_DOWN.Text" lastModified="2016-12-01 13:24:06">
     <value xml:space="preserve">AFSLUITEN</value>
