--- a/Resources/DesktopModules/Admin/FiftyOneClientCapabilityProvider/App_LocalResources/Administration.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/FiftyOneClientCapabilityProvider/App_LocalResources/Administration.ascx.nl-NL.resx
@@ -22,7 +22,7 @@
     <value xml:space="preserve">&lt;p class="{0}"&gt;Premium gegevens is actief. Bedankt.&lt;/p&gt;</value>
   </data>
   <data name="ActivateInstructionsHtml.Text" lastModified="2020-05-17 16:50:47">
-    <value xml:space="preserve">&lt;h3&gt;Activeer alle opties&lt;/h3&gt;&lt;p&gt;Stap 1 - Bemachtig een 51Degrees on premise licentiecode.&lt;/p&gt;&lt;br/&gt;&lt;p&gt;Stap 2 - Plak uw licentiecode in het tekst veld hieronder . Selecteer "Activeer" om de licentie te activeren voor deze website&lt;/p&gt;&lt;br/&gt;</value>
+    <value xml:space="preserve">&lt;h3&gt;Activeer alle opties&lt;/h3&gt;&lt;p&gt;Stap 1 - Bemachtig een 51Degrees on premise licentiecode.&lt;/p&gt;&lt;br/&gt;&lt;p&gt;Stap 2 - Plak je licentiecode in het tekst veld hieronder . Selecteer "Activeer" om de licentie te activeren voor deze website&lt;/p&gt;&lt;br/&gt;</value>
   </data>
   <data name="ActivationDataInvalidHtml.Text">
     <value xml:space="preserve">&lt;div class="{0}"&gt;&lt;p&gt;De gegevensbron van de verstrekt bevat geen geldige gegevens.&lt;/p&gt;&lt;/div&gt;</value>
@@ -38,10 +38,10 @@
 &lt;/div&gt;</value>
   </data>
   <data name="ActivationFailureCouldNotWriteLicenceFileHtml.Text" lastModified="2020-05-17 16:50:47">
-    <value xml:space="preserve">&lt;div class="{0}"&gt;&lt;p&gt;Het licentiebestand '{1}' kon niet worden geschreven naar deze websites bin map '{2}'. Maak een tekstbestand met de extensie .lic en plak de licentiesleutel in het bestand. Sla het tekstbestand in de bin-map.&lt;/p&gt;&lt;/div&gt;</value>
+    <value xml:space="preserve">&lt;div class="{0}"&gt;&lt;p&gt;Het licentiebestand '{1}' kon niet worden geschreven naar deze websites bin map '{2}'. Maak een tekstbestand met de bestandsextensie .lic en plak de licentiesleutel in het bestand. Sla het tekstbestand in de bin-map.&lt;/p&gt;&lt;/div&gt;</value>
   </data>
   <data name="ActivationFailureGenericHtml.Text" lastModified="2020-05-17 16:50:47">
-    <value xml:space="preserve">&lt;div class="{0}"&gt;&lt;p&gt;Oeps. Er was een probleem om de licentiesleutel te activeren. We zijn niet zeker waarom de licentiesleutel niet kon worden geactiveerd. Neem dan &lt;a href="http://51degrees.mobi/AboutUs/ContactUs.aspx"&gt;contact met ons&lt;/a&gt; op en verstrek details van uw website-implementatie en wij zullen proberen u te  helpen.&lt;/p&gt;&lt;/div&gt;</value>
+    <value xml:space="preserve">&lt;div class="{0}"&gt;&lt;p&gt;Oeps. Er was een probleem om de licentiesleutel te activeren. We zijn niet zeker waarom de licentiesleutel niet kon worden geactiveerd. Neem dan &lt;a href="http://51degrees.mobi/AboutUs/ContactUs.aspx"&gt;contact met ons&lt;/a&gt; op en verstrek details van je website-implementatie en wij zullen proberen u te  helpen.&lt;/p&gt;&lt;/div&gt;</value>
   </data>
   <data name="ActivationFailureHttpHtml.Text" lastModified="2020-05-17 16:50:47">
     <value xml:space="preserve">&lt;div class="{0}"&gt;&lt;p&gt;We konden de 51Degrees.mobi licentie niet bereiken tijdens validatie van de website op de host '{1}'. Dit zou kunnen komen door een van de volgende redenen.&lt;/p&gt;
@@ -141,7 +141,7 @@ attribuut in web.config staat geen toegang toe voor de host '{1}'. Wijzig de ori
     <value xml:space="preserve">Top 5 nieuwe apparaten</value>
   </data>
   <data name="NoResultsFound.Text">
-    <value xml:space="preserve">Er werden geen resultaten gevonden die overeenkomen met uw zoekopdracht.</value>
+    <value xml:space="preserve">Er werden geen resultaten gevonden die overeenkomen met je zoekopdracht.</value>
   </data>
   <data name="PremiumIntro.Text">
     <value xml:space="preserve">De {0} gegevens bevat duizenden apparaten, waaronder game consoles, eBook readers, tablets, smartphones en functie telefoons. Elk apparaat wordt geassocieerd met een breed scala van relevante eigenschappen, van schermgrootte en invoermogelijkheden van het besturingssysteem, browser en hardware.</value>
