--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/MemberServices.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/MemberServices.ascx.nl-NL.resx
@@ -74,7 +74,7 @@
   </data>
   <data name="ServicesHelp.Text" lastModified="2020-05-17 17:55:41">
     <value xml:space="preserve">In deze sectie kun je je abonnementen op diensten van deze website beheren. Op sommige diensten kun je je abonneren door middel van een zogenaamde RSVP code. Als je zo'n RSVP code hebt gekregen, dan kun je deze op deze pagina invullen, en klikken op de "Abonneer" knop naast het veld.
-Om andere abonnementen te beheren, kun je onderstaande tabel gebruiken. Sommige abonnementen kunnen betaald zijn. Als dit het geval is, dan wordt je automatisch doorverwezen naar een betalingssite. Als je terugkomt op deze site, dan kunt je op deze pagina uw abonnement controleren.</value>
+Om andere abonnementen te beheren, kun je onderstaande tabel gebruiken. Sommige abonnementen kunnen betaald zijn. Als dit het geval is, dan wordt je automatisch doorverwezen naar een betalingssite. Als je terugkomt op deze site, dan kunt je op deze pagina je abonnement controleren.</value>
   </data>
   <data name="Subscribe.Text">
     <value xml:space="preserve">Abonneren</value>
